module(name = "roo_scheduler", version = "2.1.4")

bazel_dep(name = "roo_testing", version = "1.1.7")

bazel_dep(name = "googletest", version = "1.17.0")

bazel_dep(name = "roo_collections", version = "1.3.2")
bazel_dep(name = "roo_threads", version = "1.1.5")
bazel_dep(name = "roo_time", version = "1.3.2")
