###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
  name = "gtest",
  url = "https://github.com/google/googletest/archive/v1.8.x.zip",
  strip_prefix = "googletest-1.8.x",
)

http_archive(
  name = "roo_time",
  url = "https://github.com/dejwk/roo_time/archive/refs/heads/master.zip",
  strip_prefix = "roo_time-master",
)

http_archive(
  name = "roo_collections",
  url = "https://github.com/dejwk/roo_collections/archive/refs/heads/master.zip",
  strip_prefix = "roo_collections-main",
)

http_archive(
  name = "roo_backport",
  url = "https://github.com/dejwk/roo_backport/archive/refs/heads/master.zip",
  strip_prefix = "roo_backport-main",
)
