###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

bazel_dep(name = "googletest", version = "1.15.2")

http_archive(
  name = "roo_time",
  url = "https://github.com/dejwk/roo_time/archive/refs/heads/master.zip",
  strip_prefix = "roo_time-master",
)
